services/average-shade/kubernetes/average-shade.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: average-shade-stateful
  labels:
    app: average-shade
spec:
  serviceName: average-shade
  replicas: 1
  selector:
    matchLabels:
      app: average-shade
  template:
    metadata:
      labels:
        app: average-shade
    spec:
      containers:
      - name: average-shade
        image: ghcr.io/swiss-ai-center/average-shade:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
